[FIX] take one on trying to get the images on mobile, tablet, desktop working

--- a/javascript/css/style-1000px.css
+++ b/javascript/css/style-1000px.css
@@ -133,3 +133,10 @@
 		{
 			margin: 0 0 1.25em 0;
 		}
+		
+		/*  IO HAVOC resize images */
+		#content  img 
+		{
+			width: 200px;
+    		height: auto;
+		}
