--- a/javascript/css/style-mobile.css
+++ b/javascript/css/style-mobile.css
@@ -212,6 +212,13 @@ body, input, textarea, select
 		{
 			margin: 0 0 1.25em 0;
 		}
+		
+		/*  IO HAVOC resize images */
+		#content  img 
+		{
+			width: 200px;
+    		height: auto;
+		}
 
 /* Footer */
 
